--- a/6-Revue_litterature.tex
+++ b/6-Revue_litterature.tex
@@ -104,7 +104,7 @@ Cette section aura pour but de dresser l'état des connaissances sur les politiq
     \subsubsection{La fonction de perte}
       La fonction de perte de perte est la fonction objectif que le réseau de neurones essaie de minimiser. \textcite{Azad:LossFunctions:2023, Jadon:SurveyLoss:2020} donnent un survol des principaux types de fonction de pertes et de leur applicabilité pour différentes tâches de segmentation d'image. Le choix d'une fonction de perte est dépendant de la taille de l'objet à détecter et de l'équilibre entre les différentes classes à détecter:\par
       \paragraph{Entropie Croisée Balancée} L'entropie balancée croisée est l'une des fonction de pertes les plus communes et s'applique bien avec des ensemble de données avec une distribution relativement entre les différentes classes à détecter. 
-      \subsection{Entropie Croisée balancée avec Logits} L'entropie balancée croisée peut être utilisée dans des cas où il y a une seule 
+      \paragraph{Entropie Croisée balancée avec Logits} L'entropie balancée croisée peut être utilisée dans des cas où il y a une seule 
       \paragraph{Coefficient de Dice} 
     \subsubsection{Apprentissage et Rétro-propagation}
       La rétro-propagation a été introduite comme méthode pour modifier les pondérations des différents opérations algébriques par \textcite{Rumelhart:LearningRepresentations:1986}. La méthode consiste à créer une fonction cumulée d'erreur pour les extrants des réseaux neuronaux. Ensuite, des dérivées partielles sont calculées pour chaque neurones en amont pour trouver la modification requises pour minimiser la fonction d'erreur. Deux méthodes sont envisagées dans l'article initial. La première, modifie les pondérations après chaque donnée d'entrainement tandis que la deuxième somme les erreurs pour l'ensemble du jeu de données d'entrainement.  
