Ajout de détails sur l'apprentissage machine et la finalité du mémoire

--- a/2025_PaulCharbonneau_Memoire_MSc.tex
+++ b/2025_PaulCharbonneau_Memoire_MSc.tex
@@ -64,7 +64,12 @@
 \usepackage{flafter,placeins}
 %%
 %% Autres modules. / Other packages.
-\usepackage{amsmath,color,soulutf8,longtable,colortbl,setspace,xspace,url,pdflscape,amsthm} %cite
+\usepackage{amsmath,color,soulutf8,longtable,colortbl,setspace,xspace,url,pdflscape,amsthm}
+\usepackage{neuralnetwork} %cite
+\usepackage{tikz}
+\usetikzlibrary{fadings}
+\usetikzlibrary{decorations.pathreplacing}
+\usepackage{sidecap}
 \newtheorem{definition}{Définition}
 
 %%
