--- a/4-Sigles_Abrev.tex
+++ b/4-Sigles_Abrev.tex
@@ -16,8 +16,10 @@
   \acro{TC}{Transport en Commun}
   \acro{PLUTO}{Primary Land Use Tax Lot Output}
   \acro{IoU}{Intersection over Union}
+  \acro{nIoU}{mean Intersection over Union}
   \acro{ReLu}{Unité de rectification linéaire ou \og{Rectified Linear Unit} \fg{}}
   \acro{OQLF}{Office Québecois de la Langue Française}
+  \acro{CDS}{Coefficient de Dice Sorensen}
 \end{acronym}
 %
 \begin{longtable}{lp{5in}}
@@ -27,8 +29,10 @@ CNN		   & Convolutionnal Neural Networks \\
 OSM     & OpenStreetMap \\
 TC      & Transport en Commun \\
 PLUTO   & Primary Land Use Tax Lot Output \\
-IoU & Intersection over Union\\
+IoU & Intersection over Union ou indice de Jaccard\\
+mIoU & mean Intersection over Union ou indice de Jaccard moyen\\
 ReLu & Unité de rectification linéaire ou \og{Rectified Linear Unit} \fg{}\\
 OQLF & Office Québecois de la Langue Française\\
+CDS & Coefficient de Dice Sorensen \\
 \end{longtable}
 
