--- a/7-1-Details_Solution.tex
+++ b/7-1-Details_Solution.tex
@@ -1,5 +1,37 @@
 \Chapter{MÉTHODOLOGIE}\label{sec:Methodologie}
 La section méthodologique sera divisée en trois sections. La première présentera les jeux de données disponibles dans le contexte de la ville de Québec. La deuxième présentera une plan d'ensemble de la méthodologie et des moyens encourus pour faire l'inventaire du stationnement et la troisième présentera les méthodes et indicateurs utilisés pour analyser l'offre, la demande et le degré d'utilisation du stationnement.
+\section{L'outil d'analyse du stationnement idéal}
+Cette section va décrire une méthodologie d'analyse qui pourrait être utilisé par un praticien pour évaluer le stationnement, ces effets sur la mobilité et les externalités qui y sont reliés. Deux grands types d'analyses sont possible: un diagnostic de la situation actuelle et l'évaluation de changements de politique sur la mobilité des personnes et des marchandises ainsi que les externalités qui y sont reliées. Ce mémoire n'a pas pour but de faire l'ensemble de l'analyse mais cette section veut établir un cadre d'analyse global et illustrer les chainons manquants actuels et où il contribuera à cet ensemble global.
+\subsection{Indicateurs pertinents}
+
+\subsection{Diagnostique de l'état actuel}
+  \subsubsection{Étapes du diagnostic}
+  \subsubsection{Évaluation de l'offre}
+    \paragraph{Estimation de l'offre sur rue}
+    \paragraph{Analyse de la règlementation passée}
+    \paragraph{Estimation de la capacité par méthode règlementaire}
+    \paragraph{Estimation de la capacité par inventaire direct}
+    \paragraph{Estimation de la capacité par imagerie satellite}
+    \paragraph{Consolidation d'une estimation de capacité à partir des différentes méthodes d'estimation}
+  \subsubsection{Évaluation de la demande}
+    \paragraph{Estimation de la demande à partir des enquêtes OD}
+    \paragraph{Comptage manuel de véhicule sur le terrain}
+    \paragraph{Comptage automatisé des véhicules}
+      \subparagraph{Comptage par caméra sur véhicule gouvernemental}
+      \subparagraph{Comptage analyse d'image aéroportée}
+      \subparagraph{Comptage à partir de caméra de sécurité}
+      \subparagraph{Ajout de capteurs aux places de stationnement}
+  \subsubsection{Évaluation de l'utilisation de la capacité}
+  \subsubsection{Influence de l'utilisation de la capacité sur la mobilité des personnes}
+  \subsubsection{Évaluation des coûts de remplacement et d'opportunité de l'état actuel}
+  \subsubsection{Diagramme de la procédure de diagnostique}
+\subsection{Évaluation de politiques futures}
+  \subsubsection{Élaboration de scénarios}
+  \subsubsection{Évaluation de l'effet des scénarios sur l'offre de stationnement}
+  \subsubsection{Évaluation de la variation de l'offre sur la mobilité des personnes}
+  \subsubsection{Évaluation des indicateurs de la mobilité sur l'effet}
+  \subsubsection{Diagramme de la méthodologie d'analyse}
+\section{Portée du mémoire}
 \section{Données Intrantes}
   \subsection{\ac{SIG}}
     \subsubsection{Synthèse des données disponibles}
