--- a/Maitrise_Recherche.bib
+++ b/Maitrise_Recherche.bib
@@ -603,6 +603,23 @@
   keywords = {Land use,Parking,Surveys}
 }
 
+@article{Dice:MeasuresAmount:1945,
+  title = {Measures of the {{Amount}} of {{Ecologic Association Between Species}}},
+  author = {Dice, Lee R.},
+  year = {1945},
+  month = jul,
+  journal = {Ecology},
+  volume = {26},
+  number = {3},
+  pages = {297--302},
+  issn = {0012-9658, 1939-9170},
+  doi = {10.2307/1932409},
+  urldate = {2024-07-09},
+  abstract = {Semantic Scholar extracted view of "Measures of the Amount of Ecologic Association Between Species" by L. R. Dice},
+  copyright = {http://onlinelibrary.wiley.com/termsAndConditions\#vor},
+  langid = {english}
+}
+
 @article{Dimitrovski:CurrentTrends:2023,
   title = {Current Trends in Deep Learning for {{Earth Observation}}: {{An}} Open-Source Benchmark Arena for Image Classification},
   shorttitle = {Current Trends in Deep Learning for {{Earth Observation}}},
@@ -1693,6 +1710,22 @@
   keywords = {Economic and social effects,Highway systems,Land use,Municipal engineering,Parking,Population statistics,Roads and streets,Subways,Surveying}
 }
 
+@article{Shannon:MathematicalTheory:1948,
+  title = {A Mathematical Theory of Communication},
+  author = {Shannon, C. E.},
+  year = {1948},
+  month = jul,
+  journal = {The Bell System Technical Journal},
+  volume = {27},
+  number = {3},
+  pages = {379--423},
+  issn = {0005-8580},
+  doi = {10.1002/j.1538-7305.1948.tb01338.x},
+  urldate = {2024-07-09},
+  abstract = {The recent development of various methods of modulation such as PCM and PPM which exchange bandwidth for signal-to-noise ratio has intensified the interest in a general theory of communication. A basis for such a theory is contained in the important papers of Nyquist1 and Hartley2 on this subject. In the present paper we will extend the theory to include a number of new factors, in particular the effect of noise in the channel, and the savings possible due to the statistical structure of the original message and due to the nature of the final destination of the information.},
+  file = {C:\Users\paulc\Zotero\storage\MUGVE775\Shannon - 1948 - A mathematical theory of communication.pdf}
+}
+
 @book{Shoup:HighCost:2005,
   title = {High {{Cost}} of {{Free Parking}}},
   author = {Shoup, Donald},
@@ -2011,6 +2044,19 @@
   issn = {1938-7849},
   urldate = {2024-05-18},
   file = {C:\Users\paulc\Zotero\storage\6U6R7E7C\1508510.html}
+}
+
+@book{Wallach:DeepLearning:2024,
+  title = {{Le deep learning pour le traitement d'images : classification, d{\'e}tection et segmentation avec Python et TensorFlow}},
+  shorttitle = {{Le deep learning pour le traitement d'images}},
+  author = {Wallach, Daphn{\'e}},
+  year = {2024},
+  edition = {{\'E}ditions ENI},
+  publisher = {Saint-Herblain},
+  isbn = {978-2-409-04320-8},
+  langid = {french},
+  lccn = {006.32 W195d 2024},
+  keywords = {Apprentissage profond,Reseaux neuronaux (Informatique),Traitement d'images}
 }
 
 @article{Wang:PVTV2:2022,
