Update: split litterature review to make it easier to debug. Had open citation that made it crash

--- a/2025_PaulCharbonneau_Memoire_MSc.tex
+++ b/2025_PaulCharbonneau_Memoire_MSc.tex
@@ -211,10 +211,10 @@ a été dûment accepté\ifthenelse{\equal{\monDiplome}{M}}{}{e} par le jury d'e
 \monJury
 %%
 \pagestyle{pagenumber}%
-\include{1-Dedicace}          % Dédicace du document.
-\include{2-Remerciements}     % Remerciements / Acknowledments
-\include{3-Resume_sujet}      % Résumé du sujet en français / Abstract in French
-\include{3-Abstract}          % Résumé du sujet en anglais / Abstract in English
+%\include{1-Dedicace}          % Dédicace du document.
+%\include{2-Remerciements}     % Remerciements / Acknowledments
+%\include{3-Resume_sujet}      % Résumé du sujet en français / Abstract in French
+%\include{3-Abstract}          % Résumé du sujet en anglais / Abstract in English
 
 {\setlength{\parskip}{0pt}
 %%
@@ -252,6 +252,9 @@ a été dûment accepté\ifthenelse{\equal{\monDiplome}{M}}{}{e} par le jury d'e
 \mainmatter
 \include{5-Introduction}       % Introduction au sujet de recherche.
 \include{6-Revue_litterature}  % Revue de littérature / Literature review
+\include{6-1-Revue-stat-mobilite}
+\include{6-2-Revue-stat-inventaire}
+\include{6-3-Revue-AM}
 \include{7-1-Details_Solution}             %  "Détails de la Solution" (Maîtrise)
 \include{7-2-Resultats_Solution}          %  "Résultats théoriques et expérimentaux" (Maîtrise)
 \include{8-Conclusion}         % Conclusion.
