--- a/Maitrise_Recherche.bib
+++ b/Maitrise_Recherche.bib
@@ -650,6 +650,19 @@
   file = {C:\Users\paulc\Zotero\storage\FTPR6RXK\Dosovitskiy et al. - 2020 - An Image is Worth 16x16 Words Transformers for Im.pdf}
 }
 
+@misc{ElectionsQuebec:AtlasHistorique:2021,
+  title = {{Atlas historique des circonscriptions {\'e}lectorales du Qu{\'e}bec}},
+  author = {{{\'E}lections Qu{\'e}bec}},
+  year = {2021},
+  month = feb,
+  journal = {{\'E}lections Qu{\'e}bec},
+  urldate = {2024-07-25},
+  abstract = {Commission de la repr{\'e}sentation {\'e}lectoraleCet atlas historique illustre les changements apport{\'e}s {\`a} la carte {\'e}lectorale du Qu{\'e}bec depuis 1965. Vous pouvez y comparer les cartes {\'e}tablies par la Commission de la repr{\'e}sentation {\'e}lectorale en 1965, 1972, 1980, 1985, 1988, 1992, 2001, 2011 et 2017. Chaque carte {\'e}lectorale est accompagn{\'e}e des limites municipales et des codes g{\'e}ographiques correspondants.},
+  howpublished = {https://www.electionsquebec.qc.ca/cartes-electorales/carte-electorale-du-quebec/atlas-historique-des-circonscriptions-electorales-du-quebec/},
+  langid = {canadien},
+  file = {C:\Users\paulc\Zotero\storage\BC93LKS7\atlas-historique-des-circonscriptions-electorales-du-quebec.html}
+}
+
 @article{Engel-Yan:WillReducing:2007,
   title = {Will Reducing Parking Standards Lead to Reductions in Parking Supply? {{Results}} of Extensive Commercial Parking Survey in {{Toronto}}, {{Canada}}},
   shorttitle = {Will Reducing Parking Standards Lead to Reductions in Parking Supply?},
